# algebraic-graphs-patch

./: README.md  algebraic-graphs-patch.cabal  flake.nix  hie.yaml
src/Algebra/Graph/Labelled/AdjacencyMap/: Patch.hs
